--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,15 @@ a.social, a.social:visited{
     color: gainsboro;
     padding-right: 10px; 
 }
+button{
+  min-width: 100px;
+  background-color: #F4827B;
+  color: #E0FFFA;
+  font-size: 1em;
+  border-radius: 15%;
+  border: none;
+  padding: 10px;
+}
 
 /* -----------menu button --------------------------- */
 .menubutton {
