--- a/css/styleSM.css
+++ b/css/styleSM.css
@@ -18,11 +18,12 @@
 /*Buttons*/
 button {
     min-width: 120px;
-    margin-left: 20px;
+    margin-left: 0px;
+    margin-right: 30px;
     background-color: var(--salmon);
     color: #E0FFFA;
     font-size: 1em;
-    border-radius: 15%;
+    border-radius: 11px;
     border: none;
     padding: 10px;
 }
@@ -41,12 +42,16 @@ h1 {
     font-weight: 500;
     font-size: 5rem;
     color: #E0FFFA;
+    margin: 0;
 }
 
 h2 {
     font-weight: 300;
     font-size: 2rem;
     color: #E0FFFA;
+    text-transform: uppercase;
+    margin: 0;
+    margin-top: auto;
 }
 
 p {
@@ -57,9 +62,50 @@ p {
 /*Navbar*/
 
 /*Header*/
+header {
+    margin-bottom: 50px;
+}
+/*Title*/
+.title {
+    max-width: 1300px;
+    margin: auto;
+}
+
+/*Intro*/
+.intro {
+    max-width: 1300px;
+    margin: auto;
+    text-align: justify;
+    margin-bottom: 150px;
+}
+
+/*Content*/
+.content {
+    max-width: 1300px;
+    margin: auto;
+    text-align: justify;
+    margin-bottom: 50px;
+}
+
+.last-content {
+    max-width: 1300px;
+    margin: auto;
+    text-align: justify;
+    margin-bottom: 150px;
+}
+
+.content-no-button {
+    max-width: 1300px;
+    margin: auto;
+    text-align: justify;
+    margin-bottom: 150px;
+}
 
 /*Footer*/
-
+footer {
+    max-width: 1300px;
+    margin: auto;
+}
 /*Abschnitt 1 - xy*/
 
 
@@ -124,23 +170,23 @@ a.social, a.social:visited {
 .menubutton.active .top {
     -webkit-transform: translateY(11px) translateX(0) rotate(45deg);
     transform: translateY(11px) translateX(0) rotate(45deg);
-    background: #FFF;
+    background: var(--salmon);
 }
 
 .menubutton.active .middle {
     opacity: 0;
-    background: #FFF;
+    background: var(--salmon);
 }
 
 .menubutton.active .bottom {
     -webkit-transform: translateY(-11px) translateX(0) rotate(-45deg);
     transform: translateY(-11px) translateX(0) rotate(-45deg);
-    background: #FFF;
+    background: var(--salmon);
 }
 
 .menubutton span {
 
-    background: #41454F;
+    background: var(--salmon);
     border: none;
     height: 3px;
     width: 100%;
@@ -162,24 +208,26 @@ a.social, a.social:visited {
 
 /* -------------- navigavtion------------- 	*/
 nav {
-    background-color: navy;
+    background-color: lightblue;
 }
 
-nav .container {
+nav .logoNavbar {
     padding: 0;
-    width: 100%;
+    
 }
 
 nav ul {
     padding: 0;
-    margin: 0;
+    margin: auto;
     list-style-type: none;
+    max-width: 1300px;
+    white-space: nowrap;
 }
 
 nav a,
 nav a:visited {
     display: block;
-    color: #fff;
+    color: #E0FFFA;
     line-height: 56px;
     text-transform: uppercase;
     border-bottom: 1px solid #fff;
@@ -189,8 +237,7 @@ nav a:visited {
 
 nav a:hover,
 nav a.selected {
-    background: #fff;
-    color: navy;
+    color: var(--salmon);
 }
 
 nav a:not(.selected):hover:after {
@@ -234,7 +281,7 @@ img.responsive {
 }
 
 .pager a.selected {
-    color: #fff;
+    color: var(--salmon);
     background: navy;
 }
 
@@ -253,9 +300,10 @@ img.responsive {
     }
 
     nav li {
-        width: calc(100% / 4);
+        width: calc(100% / 7);
         float: left;
         text-align: center;
+        margin: auto;
     }
 
     nav a {
