--- a/css/styleSM.css
+++ b/css/styleSM.css
@@ -1,6 +1,6 @@
 /*Unsere Fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
-
+@import url("gridSM.css");
 
 /* ===========================================================
 	TEAM systeMINT | HTML5 & CSS Project | 2021
