--- a/css/gridSM.css
+++ b/css/gridSM.css
@@ -2,7 +2,10 @@
 .container {
     padding: 0px;
     margin:0 auto;
-    width:95%;
+    width:80%;
     max-width:1280px;
 }
-
+.sy-row,
+.sy-row .col{
+    box-sizing: border-box;
+}
