--- a/css/styleSM.css
+++ b/css/styleSM.css
@@ -39,8 +39,8 @@ h1 {
     font-family: 'Luckiest Guy', cursive;
     font-weight: 500;
     font-size: 8rem;
-    color: #E0FFFA;
     margin: 0;
+    color: #E0FFFA;
 }
 
 @media only screen and (max-width: 700px) {
@@ -55,11 +55,14 @@ h1 {
     }
 }
 
+h2, h3 {
+    color: #E0FFFA;
+    text-transform: uppercase;
+}
+
 h2 {
     font-weight: 200;
     font-size: 2.5rem;
-    color: #E0FFFA;
-    text-transform: uppercase;
     margin: auto 0 20px 0;
 }
 
@@ -67,8 +70,6 @@ h2 {
 h3 {
     font-weight: 400;
     font-size: 2rem;
-    color: #E0FFFA;
-    text-transform: uppercase;
     margin: 80px 0 20px 0;
 }
 
@@ -127,6 +128,26 @@ a:hover {
     margin: auto 0 150px 0;
 }
 
+/*todo only temporär zum unterscheiden*/
+.lehrpersonen {
+    background-color: purple;
+}
+
+.spiel {
+    background-color: #fa9ae6;
+}
+
+.team {
+    background-color: #ff0c52;
+}
+
+.kontakt {
+    background-color: #e9630b;
+}
+
+.footer {
+    background-color: #87690f;
+}
 
 /* ------------------- Buttons --------------------------- */
 button {
@@ -179,13 +200,13 @@ button {
     background-color: var(--green);
 }
 
-
 @media only screen and (max-width: 500px) {
     .contact-btn, .play-btn {
         height: 3rem;
-        min-width: 160px;
-        font-size: 1.2em;
+        min-width: 130px;
+        font-size: 1em;
         border-radius: 29px;
+        margin-right: 5px;
     }
 }
 
@@ -244,7 +265,6 @@ button {
     top: 22px;
 }
 
-
 /* ------------------- Navbar aka Header todo --------------------------- */
 
 nav {
@@ -253,7 +273,6 @@ nav {
 
 nav .logoNavbar {
     padding: 0;
-
 }
 
 nav ul {
@@ -307,7 +326,6 @@ img.responsive {
     max-width: 100%;
     height: auto;
 }
-
 
 /* ----------- media queries --------------------------- */
 @media screen and (min-width: 640px) {
