--- a/css/styleSM.css
+++ b/css/styleSM.css
@@ -24,6 +24,7 @@ body {
     padding: 0;
     background: var(--background-blue);
     color: var(--light-blue);
+    text-align: justify;
 }
 
 header {
@@ -38,20 +39,26 @@ footer {
 h1 {
     font-family: 'Luckiest Guy', cursive;
     font-weight: 500;
-    font-size: 8rem;
+    font-size: 8vw;
     margin: 0;
     color: #E0FFFA;
 }
 
+@media only screen and (max-width: 1000px) {
+    h1 {
+        font-size: 8.3vw;
+    }
+}
+
 @media only screen and (max-width: 700px) {
     h1 {
-        font-size: 5rem;
+        font-size: 8.6vw;
     }
 }
 
 @media only screen and (max-width: 500px) {
     h1 {
-        font-size: 2.3rem;
+        font-size: 9vw;
     }
 }
 
@@ -62,31 +69,38 @@ h2, h3 {
 
 h2 {
     font-weight: 200;
-    font-size: 2.5rem;
+    font-size: 2vw;
     margin: auto 0 20px 0;
 }
 
 /*Titel über Content-Elementen*/
 h3 {
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 2vw;
     margin: 80px 0 20px 0;
+}
+
+@media only screen and (max-width: 1000px) {
+    h2, h3 {
+        font-size: 3vw;
+    }
 }
 
 @media only screen and (max-width: 700px) {
     h2, h3 {
-        font-size: 1.7rem;
+        font-size: 4vw;
     }
 }
 
 @media only screen and (max-width: 500px) {
     h2, h3 {
-        font-size: 1.2rem;
+        font-size: 5vw;
     }
 }
 
 p {
     line-height: 2rem;
+    overflow-wrap: break-word;
 }
 
 @media only screen and (max-width: 700px) {
@@ -277,10 +291,11 @@ nav .logoNavbar {
 
 nav ul {
     padding: 0;
-    margin: auto;
-    list-style-type: none;
+    margin: 0;
+    list-style: none;
     max-width: 1300px;
     white-space: nowrap;
+    overflow: hidden;
 }
 
 nav a,
@@ -290,8 +305,10 @@ nav a:visited {
     line-height: 56px;
     text-transform: uppercase;
     border-bottom: 1px solid #fff;
-    font-size: 1.3rem;
-    padding: 0 20px;
+    font-size: 1.5rem;
+    padding: 0;
+    padding-left: 20px;
+    
 }
 
 nav a:hover,
@@ -306,7 +323,7 @@ nav a:not(.selected):hover:after {
     font-family: 'Open Sans';
     content: "\f0da";
     font-weight: 900;
-    font-size: 2rem;
+    font-size: 2vw;
 }
 
 #mainnav {
@@ -328,7 +345,7 @@ img.responsive {
 }
 
 /* ----------- media queries --------------------------- */
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 700px) {
     .menubutton {
         display: none;
     }
@@ -361,4 +378,32 @@ img.responsive {
         height: auto;
     }
 
+}
+
+@media screen and (max-width: 1300px) {
+    #home {
+        position: absolute;
+        left: -999px;
+    }
+
+    nav li {
+        width: calc(100% / 6);
+        float: left;
+        text-align: center;
+        margin: auto;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    #contact {
+        position: absolute;
+        left: -999px;
+    }
+
+    nav li {
+        width: calc(100% / 5);
+        float: left;
+        text-align: center;
+        margin: auto;
+    }
 }
