--- a/css/styleSM.css
+++ b/css/styleSM.css
@@ -110,7 +110,6 @@ p {
         
     }
 }
-
 @media only screen and (max-width: 500px) {
     p {
         
@@ -306,13 +305,11 @@ nav a:visited {
     line-height: 56px;
     text-transform: uppercase;
     border-bottom: 1px solid #fff;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     padding: 0;
     padding-left: 20px;
     
 }
-
-#x1 a:link { color: green;};
 
 nav a:hover,
 nav a.selected {
@@ -336,6 +333,11 @@ nav a:not(.selected):hover:after {
     position: fixed;
     top: 0;
     width: 80%;
+    max-width: 1280px;
+}
+
+nav li .big {
+    font-size: 1.8rem;
 }
 
 #mainnav.active {
@@ -369,6 +371,7 @@ img.responsive {
         width: calc(100% / 7);
         float: left;
         text-align: right;
+        margin: auto;
     }
 
     nav a {
