--- a/css/styleSM.css
+++ b/css/styleSM.css
@@ -304,10 +304,11 @@ nav a:visited {
     color: #E0FFFA;
     line-height: 56px;
     text-transform: uppercase;
-    border-bottom: 1px solid #fff;
+    border-bottom: 0px solid #fff;
     font-size: 1.2rem;
     padding: 0;
     padding-left: 20px;
+    padding-right: 20px;
     
 }
 
@@ -373,7 +374,7 @@ img.responsive {
     }
 
     nav li {
-        width: calc(100% / 7);
+        width: calc(100% / 9);
         float: left;
         text-align: right;
         margin: auto;
@@ -403,7 +404,7 @@ img.responsive {
     }
 
     nav li {
-        width: calc(100% / 6);
+        width: calc(100% / 8);
     }
 }
 
@@ -413,6 +414,6 @@ img.responsive {
     }
 
     nav li {
-        width: calc(100% / 5);
+        width: calc(100% / 7);
     }
 }
