--- a/css/styleSM.css
+++ b/css/styleSM.css
@@ -1,6 +1,7 @@
 /*Unsere Fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
 @import url("gridSM.css");
+@import url("atoms.css");
 
 /* ===========================================================
 	TEAM systeMINT | HTML5 & CSS Project | 2021
@@ -23,9 +24,7 @@ body {
     text-align: left;
     margin: 0;
     padding: 0;
-    /*background: var(--background-blue);*/
-    background: linear-gradient( #081025, #177bb1, #3777c7, #3f7cc6, #154f96, #194377, #194377, #081025, #194377);
-
+    background: linear-gradient(#081025, #177bb1, #3777c7, #3f7cc6, #154f96, #194377, #194377, #081025, #194377);
     color: var(--light-blue);
 }
 
@@ -309,7 +308,7 @@ nav a:visited {
     padding: 0;
     padding-left: 20px;
     padding-right: 20px;
-    
+
 }
 
 nav a:hover,
@@ -357,7 +356,6 @@ img.responsive {
     max-width: 100%;
     height: auto;
 }
-
 
 
 /* ----------- media queries --------------------------- */
@@ -442,3 +440,6 @@ img.responsive {
 .lehrpersonen {
     margin-top: 400px;
 }
+
+
+
