--- a/css/styleSM.css
+++ b/css/styleSM.css
@@ -163,6 +163,22 @@ a:hover {
     background-color: #87690f;
 }
 
+#homelink {
+    scroll-margin-top: 100px;
+}
+
+#spiel {
+    scroll-margin-top: 100px;
+}
+
+#schule {
+    scroll-margin-top: 100px;
+}
+
+#team {
+    scroll-margin-top: 100px;
+}
+
 /* ------------------- Buttons --------------------------- */
 button {
     height: 3rem;
@@ -291,9 +307,10 @@ nav .logoNavbar {
 
 nav ul {
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     list-style: none;
-    max-width: 1300px;
+    width: 80%;
+    max-width: 1280px;
     white-space: nowrap;
     overflow: hidden;
 }
@@ -306,10 +323,6 @@ nav a:visited {
     text-transform: uppercase;
     border-bottom: 0px solid #fff;
     font-size: 1.2rem;
-    padding: 0;
-    padding-left: 20px;
-    padding-right: 20px;
-    
 }
 
 nav a:hover,
@@ -333,8 +346,7 @@ nav a:not(.selected):hover:after {
     height: 0;
     position: fixed;
     top: 0;
-    width: 80%;
-    max-width: 1280px;
+    width: 100%;
 }
 
 nav li .big {
@@ -376,8 +388,8 @@ img.responsive {
     nav li {
         width: calc(100% / 9);
         float: left;
-        text-align: right;
         margin: auto;
+        text-align: center;
     }
 
     nav a {
@@ -396,6 +408,10 @@ img.responsive {
         top: 0;
     }
 
+    nav #contact{
+        text-align: right;
+    }
+
 }
 
 @media screen and (max-width: 1300px) and (min-width: 700px) {
@@ -408,9 +424,13 @@ img.responsive {
     }
 }
 
-@media screen and (max-width: 1000px) and (min-width: 700px) {
+@media screen and (max-width: 1100px) and (min-width: 700px) {
     #contact {
         display: none;
+    }
+
+    #teamnav {
+        text-align: right;
     }
 
     nav li {
