--- a/css/styleSM.css
+++ b/css/styleSM.css
@@ -107,6 +107,11 @@ p {
     overflow-wrap: break-word;
 }
 
+li {
+    line-height: 2rem;
+    overflow-wrap: break-word;
+}
+
 /*@media only screen and (max-width: 700px) {
     p {
         
